--- a/index.html
+++ b/index.html
@@ -100,7 +100,25 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                     </ul>
                 </section>
 
-
+		<section id="program">
+                <h2>Keynote Speech</h2>
+                    	<table>
+                    		<tr>
+                    			<td style="width: 120px;padding: 7px 0;"><img src="assets/John_L_Gustafson_CEO.jpg" width="100px" style="border-radius:50%"></img></td>
+                    			<td>
+                    				<p style="font-size: 24px; margin-bottom: 5px; padding-bottom: 0px;"><strong style="color: #005f73;"><a href="https://en.wikipedia.org/wiki/John_Gustafson_%28scientist%29">Dr. John L. Gustafson</a></strong></p>
+                    				<p style="margin:0px;">Arizona State University and VQ Research</p>
+                    			</td>
+                    		</tr>
+                    	</table>
+                    	<p><strong style="color: #222;">Every Bit Counts: Posit Computing for Energy-Efficient HPC and AI</strong></p>
+			<p><strong>Abstract</strong> Both the HPC and AI communities are increasingly adopting the posit arithmetic approach introduced by Dr. John L. Gustafson in 2017. By rethinking how numbers are represented and computed, posits offer a promising pathway toward energy-efficient high-performance computing, aligning with the goals of sustainable exascale systems. Traditional technical computing relies on numerical representations invented over a century ago (1914) and ad hoc number formats from nearly 50 years ago, designed for an era when transistors were expensive but electrical power was abundant. Persisting with these antiquated formats into the exascale era wastes power, energy, storage, bandwidth, and programmer effort. Unlike legacy floating-point formats, posits are mathematically closed, produce reproducible results across platforms, and dynamically allocate precision based on magnitude. This allows computers to save time, storage, energy, and power by encoding more information per bit and avoiding repeated computations or error corrections. <br> In this keynote, Dr. Gustafson will present recent developments in posit arithmetic. By providing enhanced precision and dynamic range with fewer bits, posits enable more accurate calculations while reducing energy and computational overhead. Posits also handle edge cases robustly, minimizing wasted cycles and memory accesses. The talk will explore theoretical foundations, practical implementation challenges, and the potential of posits to drive energy-efficient computation, offering a fresh design that delivers better answers with lower energy consumption.
+</p> 
+			
+			<p><strong>BIO</strong> Dr. John L. Gustafson is a renowned computer scientist and pioneer in high-performance computing. He is best known for formulating Gustafson’s Law, the foundational alternative to Amdahl’s Law, which transformed the world’s understanding of massively parallel scalability and earned him the inaugural Gordon Bell Prize in 1988. Over the course of his career, he has led groundbreaking research at Sandia National Laboratories, where he introduced one of the world’s first commercial computer clusters and founded the Scalable Computing Laboratory. In industry, he has held senior and executive roles at Intel (Director and Lab Leader for energy-efficient and extreme-scale computing), AMD (Chief Graphics Product Architect and Senior Fellow), ClearSpeed Technology (CTO), and Massively Parallel Technologies (CEO). He created the unum and posit number systems, alternatives to IEEE floating-point that improve accuracy and energy efficiency. He has authored influential books (e.g., Every Bit Counts) and numerous highly cited papers on parallel performance, computer arithmetic, and HPC productivity. He holds applied mathematics degrees from Caltech and Iowa State University. Across academia and industry, Gustafson has been a visiting scholar, educator, and keynote speaker, and currently serves as Visiting Scholar at Arizona State University and Chief Scientist/Co-founder of VQ Research.</p>
+			<br/>
+		</section>
+				
                 <section id="organization">
                     <h2>Workshop General Chair</h2>
                     <div style="display: flex; align-items: center;">
