--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                     <h2>Workshop General Chair</h2>
                     <div style="display: flex; align-items: center;">
                         <img src="assets/Ayesha.jpg" alt="Ayesha Afzal Photo" style="height: 100px; width: auto; border-radius: 50%; margin-right: 15px;">
-                        <p><strong style="color: #005f73;"><a href="https://hpc.fau.de/person/ayesha-afzal">Ayesha Afzal</a></strong> - Erlangen National High Performance Computing Center (NHR@FAU)</p>
+                        <p><strong style="color: #005f73;"><a href="https://hpc.fau.de/person/ayesha-afzal">Ayesha Afzal</a></strong> - Erlangen National High Performance Computing Center (NHR@FAU), Geramny</p>
                     </div> 
 
                     <h3>Program Co-Chairs</h3>
                     <ul>
-                        <li><a href="https://www.linkedin.com/in/natalie-bates-396998b">Natalie Bates</a> - Energy Efficient HPC Working Group (EE HPC WG)</li>
-                        <li><a href="https://cemse.kaust.edu.sa/profiles/hatem-ltaief">Hatem Ltaief</a> - King Abdullah University of Science and Technology (KAUST)</li>
-                        <li><a href="https://people.llnl.gov/desupinski1">Bronis R. de Supinski</a> - Lawrence Livermore National Laboratory (LLNL)</li>
+                        <li><a href="https://www.linkedin.com/in/natalie-bates-396998b">Natalie Bates</a> - Energy Efficient HPC Working Group (EE HPC WG), USA</li>
+                        <li><a href="https://cemse.kaust.edu.sa/profiles/hatem-ltaief">Hatem Ltaief</a> - King Abdullah University of Science and Technology (KAUST), Saudi Arabia</li>
+                        <li><a href="https://people.llnl.gov/desupinski1">Bronis R. de Supinski</a> - Lawrence Livermore National Laboratory (LLNL), USA</li>
                     </ul>
 
                     <h3 class="theme-color">Program Committee</h3>
