--- a/index.html
+++ b/index.html
@@ -173,6 +173,18 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                         <li>Notification: April 14, 2026, AoE</li>
                         <li>Camera ready deadline: May 26, 2026, AoE</li>
                     </ul>
+					<hr>
+<h3>EESP 2025 Statistics Highlights</h3>
+<ul>
+    <li>22 papers received from 11 countries</li>
+	<li>4.9/5 rating in ISC evaluation survey</li>
+    <li>37 committee members across 16 countries</li>
+    <li>40 attendees (⚠️overlap with ISC tutorials)</li>
+    <li>3 technical sessions</li>
+    <li>Keynote by John Shalf, LBNL</li>
+    <li>Best Paper: “What A Waste,” Queen's University</li>
+</ul>
+
                 </section>
             </div>
         </div>
