--- a/index.html
+++ b/index.html
@@ -165,19 +165,28 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
             <div style="flex: 1; padding-left: 20px;">
                 <section id="announcements">
                     <h2>Announcements</h2>
-                    <h3>Call for Paper Open!</h3>
-                    <p>Submission for EESP 2026 proceedings is open. Check the technical details <a href="#cfp">here</a>.</p> <hr>
+                    <h3>Call for Paper Open and keynote announced!</h3>
+                    <p>Keynote speech by John Gustafson has been announced and paper submission for EESP 2026 proceedings is open. Check the technical details <a href="#cfp">here</a>.</p> <hr>
                     <h3>Important Dates</h3>
                     <ul>
                         <li>Submission deadline: March 1, 2026, AoE</li>
                         <li>Notification: April 14, 2026, AoE</li>
                         <li>Camera ready deadline: May 26, 2026, AoE</li>
+						<li>Workshop date: June 26, 2026</li>
                     </ul>
+<hr>
+<h3>EESP 2026 Statistics Highlights</h3>
+<ul>
+    <li>Highest 3/3 score in ISC workshop proposal review</li>
+    <li>Keynote by John Gustafson, Arizona State University & VQ Research</p></li>
+    <li>Others: TBA</li>
+</ul>
+
 					<hr>
 <h3>EESP 2025 Statistics Highlights</h3>
 <ul>
     <li>22 papers received from 11 countries</li>
-	<li>4.9/5 rating in ISC evaluation survey</li>
+	<li>4.9/5 score in ISC evaluation survey</li>
     <li>37 committee members across 16 countries</li>
     <li>40 attendees (⚠️overlap with ISC tutorials)</li>
     <li>3 technical sessions</li>
