--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
     <li>22 papers received from 11 countries</li>
 	<li>4.9/5 score in ISC evaluation survey</li>
     <li>37 committee members across 16 countries</li>
-    <li>40 attendees (⚠️overlap with ISC tutorials)</li>
+    <li>40 attendees (overlap with ISC tutorials)</li>
     <li>3 technical sessions</li>
     <li>Keynote by John Shalf, LBNL</li>
     <li>Best Paper: “What A Waste,” Queen's University</li>
