--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 	<li>4.9/5 score in ISC post-evaluation survey</li>
     <li>37 committee members across 16 countries</li>
     <li>40 attendees (overlap with ISC tutorials)</li>
-    <li>3 technical sessions by 4 chairs from 4 countries</li>
+    <li>4 sessions by 4 chairs from 4 countries</li>
     <li>Keynote by John Shalf, LBNL</li>
     <li>Best Paper: “What A Waste,” Queen's University</li>
 </ul>
