--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <h3>EESP 2026 Statistics Highlights</h3>
 <ul>
     <li>Highest 3/3 score in ISC workshop proposal review</li>
-    <li>Keynote by <a href="https://en.wikipedia.org/wiki/John_Gustafson_%28scientist%29">John Gustafson</a>, ASU & VQ Research</p></li>
+    <li>Keynote by <a href="https://en.wikipedia.org/wiki/John_Gustafson_%28scientist%29">John Gustafson</a>, ASU & VQ Research</li>
     <li>Others: TBA</li>
 </ul>
 
