--- a/2025.html
+++ b/2025.html
@@ -10,7 +10,9 @@
     
 <header style="display: flex; justify-content: space-between; align-items: center;">
     <div style="flex: 1; text-align: left;">
-        <img src="assets/eesp-logo.jpg" alt="EESP Workshop Logo" style="height: 150px; width: auto; flex-shrink: 0;">
+        <img src="assets/EESP25-compressed.png" alt="EESP Workshop Logo" style="height: 150px; width: auto; flex-shrink: 0;">
+		<br>
+    <a href="assets/EESP25.png" download="EESP_Workshop_Logo_2025" style="font-size: 0.9em; color: white; text-decoration: none;">Download Logo</a>
     </div>
     <div style="text-align: center; flex-grow: 2;">
         <h1>EESP Workshop 2025</h1>
