--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                         <li><strong>Review Process</strong>
                             <ul>
                                 <li>Each submission will undergo a minimum of three single-blind peer reviews.</li>
-                                <li>Review criteria include originality, technical soundness, impact, and quality of presentation.</li
+                                <li>Review criteria include originality, technical soundness, impact, and quality of presentation.</li>
 								<li>The <strong>Best Paper Award</strong> will be selected by the workshop program and organizing committee according to the established review criteria.</li>                            
 							</ul>
                         </li>
