--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                         <li><strong>Submission Guidelines</strong>
                             <ul>
                                 <li>Papers should be either <strong>short</strong> (work-in-progress, 6 pages) or <strong>regular</strong> (12 pages), including references and appendices.</li>
-                                <li>Submitted papers must be original and not previously published or under review for any other conference or journal.</li>
+                                <li>Submitted papers must be original and not previously published or under review elsewhere.</li>
                                 <li>Use the <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines" target="_blank">Springer Lecture Notes in Computer Science (LNCS) template</a>.</li>
                                 <li>Submit papers in PDF format through the ISC Linklings submission system (Link: TBA).</li>
                             </ul>
