--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                         </li>
                         <li><strong>Post-Submission</strong>
                             <ul>
-                                <li>Accepted papers will be published as part of the <strong>ISC proceedings in the <a href="https://www.springer.com/de/it-informatik/lncs" target="_blank">Springer LNCS series</a></strong>.</li>
+                                <li>Accepted papers will be published as part of the <strong><a href="https://www.springer.com/de/it-informatik/lncs" target="_blank">ISC proceedings in the Springer LNCS series</a></strong>.</li>
                                 <li>There is an option for submitting <strong>two additional pages</strong> after the review to address reviewer feedback.</li>
 								<li>One author must present the accepted paper in person and <a href="https://isc-hpc.com/attendance/registration" target="_blank">register for the ISC 'Workshop Pass.'</a></li>
 								<li>Information on travel, visas, accommodation, and attractions in Hamburg is available on the <a href="https://isc-hpc.com/attendance" target="_blank">ISC 2026 website.</a></li>
