--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 
 				<section id="pastedition">
 					<h2>Past Edition</h2>
-				    <p>← EESP 2025: <a href="2025.html">Website</a> [<a href="https://link.springer.com/book/10.1007/978-3-032-07612-0">Proceedings</a>]</p>
+				    <p>← EESP 2025: [<a href="2025.html">Website</a>]; [<a href="https://link.springer.com/book/10.1007/978-3-032-07612-0">Proceedings</a>]</p>
 				</section>
 				
                 <section id="contact">
