--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 
 				<section id="pastedition">
 					<h2>Past Edition</h2>
-				    <p>← EESP 2025: [<a href="2025.html">Website</a>]; [<a href="https://link.springer.com/book/10.1007/978-3-032-07612-0">Proceedings</a>]</p>
+				    <p>← EESP 2025: [<a href="2025.html">Website</a>]; [<a href="https://link.springer.com/book/10.1007/978-3-032-07612-0">Springer Proceedings</a>]</p>
 				</section>
 				
                 <section id="contact">
@@ -177,7 +177,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <hr>
 <h3>EESP 2026 Statistics Highlights</h3>
 <ul>
-    <li>Highest 3/3 score in ISC workshop proposal review</li>
+    <li>Highest 3/3 score by 4 reviewers in ISC workshop proposal review</li>
     <li>Keynote by John Gustafson, ASU & Vq Research</li>
     <li>Others: TBA</li>
 </ul>
@@ -192,7 +192,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
     <li>4 sessions by 4 chairs from 4 countries</li>
     <li>Keynote by John Shalf, LBNL</li>
     <li>Best Paper: “What A Waste,” Queen's University</li>
-	<li>Proceedings available <a href="https://link.springer.com/book/10.1007/978-3-032-07612-0">here</a></li>
+	<li>Springer Proceedings available <a href="https://link.springer.com/book/10.1007/978-3-032-07612-0">here</a></li>
 </ul>
 
                 </section>
