--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
     <li>4 sessions by 4 chairs from 4 countries</li>
     <li>Keynote by John Shalf, LBNL</li>
     <li>Best Paper: “What A Waste,” Queen's University</li>
-	<li><a href="https://link.springer.com/book/10.1007/978-3-032-07612-0">Springer Proceedings</a>: free access until mid-Jan 2026</li>
+	<li>Free access to <a href="https://link.springer.com/book/10.1007/978-3-032-07612-0">Proceedings</a> until mid-Jan 2026</li>
 </ul>
 
                 </section>
