--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
             <div style="flex: 1; padding-left: 20px;">
                 <section id="announcements">
                     <h2>Announcements</h2>
-                    <h3>Call for Paper Open and keynote announced!</h3>
+                    <h3>Call for Paper Open and Keynote Announced!</h3>
                     <p>Keynote speech by John Gustafson has been announced and paper submission for EESP 2026 proceedings is open. Check the technical details <a href="#cfp">here</a>.</p> <hr>
                     <h3>Important Dates</h3>
                     <ul>
