--- a/index.html
+++ b/index.html
@@ -100,6 +100,23 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                     </ul>
                 </section>
 
+	<section>
+    <h3>EESP Best Paper Award</h3>
+    <p>
+        As in previous editions, the workshop program and organizing committee will select one paper
+        for the Best Paper Award. The selection will be based on the established review criteria:
+        originality, technical soundness, potential impact, significance, and quality of presentation.
+        The Best Paper Award certificate will be presented in person during the workshop.
+    </p>
+
+    <h3>EESP Journal Special Issue</h3>
+    <p>
+        The authors of the highest-quality accepted EESP26 papers, as selected by the Program and
+        Organizing Committee of the workshop, will be invited to submit extended versions of their
+        work to a special issue of the <em>International Journal of High Performance Computing Applications</em>.
+    </p>
+</section>
+
 		<section id="program">
                 <h2>Keynote Speech</h2>
                     	<table>
