--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                     </ul>
                 </section>
 
-	<section>
+<section id="cfp">
+    <h2>EESP Awards and Journal Opportunities</h2>
+
     <h3>EESP Best Paper Award</h3>
     <p>
         As in previous editions, the workshop program and organizing committee will select one paper
