--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 
     <h3>EESP Journal Special Issue</h3>
     <p>
-        The authors of the highest-quality accepted EESP26 papers, as selected by the Program and
+        The authors of the highest-quality accepted EESP papers, as selected by the Program and
         Organizing Committee of the workshop, will be invited to submit extended versions of their
-        work to a special issue of the <em>International Journal of High Performance Computing Applications</em>.
+        work to a special issue of the <em>International Journal of High Performance Computing Applications (IJHPCA)</em>.
     </p>
 </section>
 
