--- a/index.html
+++ b/index.html
@@ -100,25 +100,32 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                     </ul>
                 </section>
 
-<section id="cfp">
+<section>
     <h2>EESP Awards and Journal Opportunities</h2>
 
     <h3>EESP Best Paper Award</h3>
-    <p>
-        As in previous editions, the workshop program and organizing committee will select one paper
-        for the Best Paper Award. The selection will be based on the established review criteria:
-        originality, technical soundness, potential impact, significance, and quality of presentation.
-        The Best Paper Award certificate will be presented in person during the workshop.
-    </p>
+    <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 10px;">
+        <img src="images/ISC25-EESP-Best-Paper-Award-Certificate.pdf" alt="EESP Logo" style="height: 60px;">
+        <p style="margin: 0;">
+            As in previous editions, the workshop program and organizing committee will select one paper 
+            for the Best Paper Award. The selection will be based on the established review criteria: 
+            originality, technical soundness, potential impact, significance, and quality of presentation. 
+            The Best Paper Award certificate will be presented in person during the workshop.
+        </p>
+    </div>
 
     <h3>EESP Journal Special Issue</h3>
-    <p>
-        The authors of the highest-quality accepted EESP papers, as selected by the Program and
-        Organizing Committee of the workshop, will be invited to submit extended versions of their
-        work to a special issue of the <em>International Journal of High Performance Computing Applications (IJHPCA)</em>.
-    </p>
+    <div style="display: flex; align-items: center; gap: 15px;">
+        <img src="images/sage.svg" alt="IJHPCA Logo" style="height: 60px;">
+        <p style="margin: 0;">
+            The authors of the highest-quality accepted EESP26 papers, as selected by the Program and 
+            Organizing Committee of the workshop, will be invited to submit extended versions of their 
+            work to a special issue of the 
+            <em>International Journal of High Performance Computing Applications</em>.
+        </p>
+    </div>
 </section>
-
+				
 		<section id="program">
                 <h2>Keynote Speech</h2>
                     	<table>
