--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                             <ul>
                                 <li>Each submission will undergo a minimum of three single-blind peer reviews.</li>
                                 <li>Review criteria include originality, technical soundness, impact, and quality of presentation.</li>
-								<li>The <strong>Best Paper Award</strong> will be selected by the workshop program and organizing committee according to the established review criteria.</li>                            
 							</ul>
                         </li>
                         <li><strong>Post-Submission</strong>
@@ -105,7 +104,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 
     <h3>EESP Best Paper Award</h3>
     <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 10px;">
-        <img src="assets/ISC25-EESP-Best-Paper-Award-Certificate.pdf" alt="EESP Logo" style="height: 60px;">
+        <img src="assets/ISC25-EESP-Best-Paper-Award-Certificate.png" alt="EESP Logo" style="height: 60px;">
         <p style="margin: 0;">
             As in previous edition, the workshop program and organizing committee will select one paper 
             for the Best Paper Award. The selection will be based on the established review criteria: 
@@ -118,10 +117,10 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
     <div style="display: flex; align-items: center; gap: 15px;">
         <img src="assets/sage.svg" alt="IJHPCA Logo" style="height: 60px;">
         <p style="margin: 0;">
-            The authors of the highest-quality accepted EESP26 papers, as selected by the Program and 
+            The authors of the highest-quality accepted EESP papers, as selected by the Program and 
             Organizing Committee of the workshop, will be invited to submit extended versions of their 
             work to a special issue of the 
-            <em>International Journal of High Performance Computing Applications</em>.
+            <em><a href="https://journals.sagepub.com/home/hpc">International Journal of High Performance Computing Applications</a></em>.
         </p>
     </div>
 </section>
