--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
             The authors of the highest-quality accepted EESP papers, as selected by the Program and 
             Organizing Committee of the workshop, will be invited to submit extended versions of their 
             work to a special issue of the 
-            <em><a href="https://journals.sagepub.com/home/hpc">International Journal of High Performance Computing Applications</a></em>.
+            <em><a href="https://journals.sagepub.com/home/hpc">International Journal of High Performance Computing Applications (IJHPCA)</a></em>.
         </p>
     </div>
 </section>
