--- a/index.html
+++ b/index.html
@@ -159,7 +159,21 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                     </ul>
 
                     <h3 class="theme-color">Program Committee</h3>
-                    TBA
+                    <h2 class="theme-color">Program Committee</h2>
+<ul>
+    <li><span style="color: #005f73;">Aleš Zamuda</span> - University of Maribor, Slovenia</li>
+    <li><span style="color: #005f73;">Arthur F. Lorenzon</span> - UFRGS, Brazil</li>
+    <li><span style="color: #005f73;">Ashiq Anjum</span> - University of Leicester, UK</li>
+    <li><span style="color: #005f73;">Bilel Hadri</span> - KAUST Supercomputing Lab, Saudi Arabia</li>
+    <li><span style="color: #005f73;">Erwin Laure</span> - Max Planck Computing and Data Facility, Germany</li>
+    <li><span style="color: #005f73;">Frédéric Desprez</span> - INRIA, France</li>
+    <li><span style="color: #005f73;">Markus Rampp</span> - Max Planck Computing and Data Facility, Germany</li>
+    <li><span style="color: #005f73;">Ondřej Vysocký</span> - IT4Innovations National Supercomputing Center, Czech Republic</li>
+    <li><span style="color: #005f73;">Robert Schöne</span> - Technische Universität Dresden, Germany</li>
+    <li><span style="color: #005f73;">William F Godoy</span> - Oak Ridge National Laboratory, USA</li>
+    <li><span style="color: #005f73;">Xingfu Wu</span> - Argonne National Laboratory, USA</li>
+    <li><span style="color: #005f73;">Zhengji Zhao</span> - Lawrence Berkeley National Laboratory, USA</li>
+</ul>
                     </section>
 
                     <section id="collaborators">
