--- a/index.html
+++ b/index.html
@@ -159,7 +159,6 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                     </ul>
 
                     <h3 class="theme-color">Program Committee</h3>
-                    <h2 class="theme-color">Program Committee</h2>
 <ul>
     <li><span style="color: #005f73;">Aleš Zamuda</span> - University of Maribor, Slovenia</li>
     <li><span style="color: #005f73;">Arthur F. Lorenzon</span> - UFRGS, Brazil</li>
@@ -174,6 +173,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
     <li><span style="color: #005f73;">William F Godoy</span> - Oak Ridge National Laboratory, USA</li>
     <li><span style="color: #005f73;">Xingfu Wu</span> - Argonne National Laboratory, USA</li>
     <li><span style="color: #005f73;">Zhengji Zhao</span> - Lawrence Berkeley National Laboratory, USA</li>
+	<li><span style="color: #005f73;">Remaining: TBA</span></li>
 </ul>
                     </section>
 
