--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
     <li><span style="color: #005f73;">Erwin Laure</span> - Max Planck Computing and Data Facility, Germany</li>
     <li><span style="color: #005f73;">Frédéric Desprez</span> - INRIA, France</li>
     <li><span style="color: #005f73;">Georg Hager</span> - Erlangen National High Performance Computing Center, Germany</li>
+	<li><span style="color: #005f73;">Maria Patrou</span> - Oak Ridge National Laboratory, USA</li>
     <li><span style="color: #005f73;">Markus Rampp</span> - Max Planck Computing and Data Facility, Germany</li>
     <li><span style="color: #005f73;">Ondřej Vysocký</span> - IT4Innovations National Supercomputing Center, Czech Republic</li>
     <li><span style="color: #005f73;">Robert Schöne</span> - Technische Universität Dresden, Germany</li>
