--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
     <li><span style="color: #005f73;">Georg Hager</span> - Erlangen National High Performance Computing Center, Germany</li>
 	<li><span style="color: #005f73;">Maria Patrou</span> - Oak Ridge National Laboratory, USA</li>
     <li><span style="color: #005f73;">Markus Rampp</span> - Max Planck Computing and Data Facility, Germany</li>
+	<li><span style="color: #005f73;">Mauricio Araya-Polo</span> - TotalEnergies E&P R&T, USA</li>
     <li><span style="color: #005f73;">Ondřej Vysocký</span> - IT4Innovations National Supercomputing Center, Czech Republic</li>
     <li><span style="color: #005f73;">Robert Schöne</span> - Technische Universität Dresden, Germany</li>
     <li><span style="color: #005f73;">William F Godoy</span> - Oak Ridge National Laboratory, USA</li>
@@ -218,7 +219,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <h3>EESP 2026 Statistics Highlights</h3>
 <ul>
     <li>Highest 3/3 score by 4 reviewers in ISC workshop proposal review</li>
-    <li>17 committee members across 8 countries</li>
+    <li>19 committee members across 8 countries</li>
     <li>Keynote by John Gustafson, ASU & Vq Research</li>
     <li>Others: TBA</li>
 </ul>
