--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                 </section>
 
 <section>
-    <h2>EESP Awards and Journal Opportunities</h2>
+    <h2>Awards and Journal Opportunities</h2>
 
     <h3>EESP Best Paper Award</h3>
     <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 10px;">
