--- a/index.html
+++ b/index.html
@@ -100,8 +100,18 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                 </section>
 
 <section>
-    <h2>Awards and Journal Opportunities</h2>
+    <h2>Opportunities</h2>
 
+    <h3>EESP Paper Proceedings</h3>
+    <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 10px;">
+        <img src="assets/springer-logo.png" alt="Springer Logo" style="height: 60px;">
+        <p style="margin: 0;">
+            Papers accepted and presented at EESP 2026 will be published as part of the ISC proceedings 
+            in  
+            <strong><a href="https://www.springer.com/de/it-informatik/lncs" target="_blank"> Springer’s Lecture Notes in Computer Science (LNCS) series</a></strong>.
+        </p>
+    </div>
+	
     <h3>EESP Best Paper Award</h3>
     <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 10px;">
         <img src="assets/ISC25-EESP-Best-Paper-Award-Certificate.png" alt="EESP Logo" style="height: 60px;">
