--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
         <p style="margin: 0;">
             Papers accepted and presented at EESP 2026 will be published as part of the ISC proceedings 
             in  
-            <strong><a href="https://www.springer.com/de/it-informatik/lncs" target="_blank"> Springer’s Lecture Notes in Computer Science (LNCS) series</a></strong>.
+            <strong><em><a href="https://www.springer.com/de/it-informatik/lncs" target="_blank"> Springer’s Lecture Notes in Computer Science (LNCS) series</a></em></strong>.
         </p>
     </div>
 	
@@ -129,7 +129,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
             The authors of the highest-quality accepted EESP papers, as selected by the Program and 
             Organizing Committee of the workshop, will be invited to submit extended versions of their 
             work to a special issue of the 
-            <em><a href="https://journals.sagepub.com/home/hpc">International Journal of High Performance Computing Applications (IJHPCA)</a></em>.
+            <strong><em><a href="https://journals.sagepub.com/home/hpc">International Journal of High Performance Computing Applications (IJHPCA)</a></em></strong>.
         </p>
     </div>
 </section>
