--- a/index.html
+++ b/index.html
@@ -171,12 +171,14 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <ul>
 <li><span style="color: #005f73;">Mauricio Araya-Polo</span> - TotalEnergies E&P R&T, USA</li>
 <li><span style="color: #005f73;">Ashiq Anjum</span> - University of Leicester, UK</li>
+ <li><span style="color: #005f73;">Markus Diesmann</span> - Forschungszentrum Jülich, Germany</li>  
 <li><span style="color: #005f73;">Frédéric Desprez</span> - INRIA, France</li>
 <li><span style="color: #005f73;">Aditya Deshpande</span> - Samsung Semiconductor, USA</li>
+<li><span style="color: #005f73;">Martin Frank</span> -  Karlsruhe Institute of Technology, Germany</li>
 <li><span style="color: #005f73;">William F Godoy</span> - Oak Ridge National Laboratory, USA</li>
 <li><span style="color: #005f73;">Bilel Hadri</span> - KAUST Supercomputing Lab, Saudi Arabia</li>
-<li><span style="color: #005f73;">Martin Frank</span> -  Karlsruhe Institute of Technology, Germany</li>
 <li><span style="color: #005f73;">Georg Hager</span> - Erlangen National High Performance Computing Center, Germany</li>
+<li><span style="color: #005f73;">Aleksandar Ilic</span> - University of Lisbon, Portugal</li>
 <li><span style="color: #005f73;">Jacques-Charles Lafoucriere</span> - CEA, France</li>	
 <li><span style="color: #005f73;">Erwin Laure</span> - Max Planck Computing and Data Facility, Germany</li>
 <li><span style="color: #005f73;">Arthur F. Lorenzon</span> - UFRGS, Brazil</li>
@@ -184,6 +186,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Maria Patrou</span> - Oak Ridge National Laboratory, USA</li>
 <li><span style="color: #005f73;">Markus Rampp</span> - Max Planck Computing and Data Facility, Germany</li>
 <li><span style="color: #005f73;">István Z. Reguly</span> - Pázmány Péter Catholic University, Hungary</li>
+<li><span style="color: #005f73;">Filippo Spiga</span> - NVIDIA, UK</li>
 <li><span style="color: #005f73;">Robert Schöne</span> - Technische Universität Dresden, Germany</li>
 <li><span style="color: #005f73;">Fumiyoshi Shoji</span> - RIKEN Center for Computational Science, Japan</li>
 <li><span style="color: #005f73;">Ondřej Vysocký</span> - IT4Innovations National Supercomputing Center, Czech Republic</li>
