--- a/index.html
+++ b/index.html
@@ -169,9 +169,10 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 
                     <h3 class="theme-color">Program Committee</h3>
 <ul>
-<li><span style="color: #005f73;">Mauricio Araya-Polo</span> - TotalEnergies E&P R&T, USA</li>
+<li><span style="color: #005f73;">Ahmad Abdelfattah</span> - University of Tennessee, USA</li>
 <li><span style="color: #005f73;">Ashiq Anjum</span> - University of Leicester, UK</li>
- <li><span style="color: #005f73;">Markus Diesmann</span> - Forschungszentrum Jülich, Germany</li>  
+<li><span style="color: #005f73;">Mauricio Araya-Polo</span> - TotalEnergies E&P R&T, USA</li>
+<li><span style="color: #005f73;">Markus Diesmann</span> - Forschungszentrum Jülich, Germany</li>  
 <li><span style="color: #005f73;">Frédéric Desprez</span> - INRIA, France</li>
 <li><span style="color: #005f73;">Aditya Deshpande</span> - Samsung Semiconductor, USA</li>
 <li><span style="color: #005f73;">Martin Frank</span> -  Karlsruhe Institute of Technology, Germany</li>
