--- a/index.html
+++ b/index.html
@@ -172,11 +172,12 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Ahmad Abdelfattah</span> - University of Tennessee, USA</li>
 <li><span style="color: #005f73;">Ashiq Anjum</span> - University of Leicester, UK</li>
 <li><span style="color: #005f73;">Mauricio Araya-Polo</span> - TotalEnergies E&P R&T, USA</li>
-<li><span style="color: #005f73;">Markus Diesmann</span> - Forschungszentrum Jülich, Germany</li>  
+<li><span style="color: #005f73;">Markus Diesmann</span> - Forschungszentrum Jülich, Germany</li> 
 <li><span style="color: #005f73;">Frédéric Desprez</span> - INRIA, France</li>
 <li><span style="color: #005f73;">Aditya Deshpande</span> - Samsung Semiconductor, USA</li>
 <li><span style="color: #005f73;">Martin Frank</span> -  Karlsruhe Institute of Technology, Germany</li>
 <li><span style="color: #005f73;">William F Godoy</span> - Oak Ridge National Laboratory, USA</li>
+<li><span style="color: #005f73;">Diana Goehringer</span> - Technische Universität Dresden, Germany</li>
 <li><span style="color: #005f73;">Bilel Hadri</span> - KAUST Supercomputing Lab, Saudi Arabia</li>
 <li><span style="color: #005f73;">Georg Hager</span> - Erlangen National High Performance Computing Center, Germany</li>
 <li><span style="color: #005f73;">Aleksandar Ilic</span> - University of Lisbon, Portugal</li>
