--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Bilel Hadri</span> - KAUST Supercomputing Lab, Saudi Arabia</li>
 <li><span style="color: #005f73;">Georg Hager</span> - Erlangen National High Performance Computing Center, Germany</li>
 <li><span style="color: #005f73;">Aleksandar Ilic</span> - University of Lisbon, Portugal</li>
+<li><span style="color: #005f73;">Zoltan Kiss</span> - Governmental IT Development Agency (KIFÜ), Hungary</li> 
 <li><span style="color: #005f73;">Jacques-Charles Lafoucriere</span> - CEA, France</li>	
 <li><span style="color: #005f73;">Erwin Laure</span> - Max Planck Computing and Data Facility, Germany</li>
 <li><span style="color: #005f73;">Arthur F. Lorenzon</span> - UFRGS, Brazil</li>
@@ -239,7 +240,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <h3>EESP 2026 Statistics Highlights</h3>
 <ul>
     <li>Highest 3/3 score by 4 reviewers in ISC workshop proposal review</li>
-    <li>30 committee members across 11 countries</li>
+    <li>31 committee members across 11 countries</li>
     <li>Keynote by John Gustafson, ASU & Vq Research</li>
     <li>Others: TBA</li>
 </ul>
