--- a/index.html
+++ b/index.html
@@ -157,46 +157,46 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                     <h2>Workshop General Chair</h2>
                     <div style="display: flex; align-items: center;">
                         <img src="assets/Ayesha.jpg" alt="Ayesha Afzal Photo" style="height: 100px; width: auto; border-radius: 50%; margin-right: 15px;">
-                        <p><strong style="color: #005f73;"><a href="https://hpc.fau.de/person/ayesha-afzal">Ayesha Afzal</a></strong> - Erlangen National High Performance Computing Center (NHR@FAU), Geramny</p>
+                        <p><strong style="color: #005f73;"><a href="https://hpc.fau.de/person/ayesha-afzal">Ayesha Afzal</a></strong> - <i>Erlangen National High Performance Computing Center (NHR@FAU), Geramny</i></p>
                     </div> 
 
                     <h3>Program Co-Chairs</h3>
-                    <ul>
-                        <li><a href="https://www.linkedin.com/in/natalie-bates-396998b">Natalie Bates</a> - Energy Efficient HPC Working Group (EE HPC WG), USA</li>
-                        <li><a href="https://cemse.kaust.edu.sa/profiles/hatem-ltaief">Hatem Ltaief</a> - King Abdullah University of Science and Technology (KAUST), Saudi Arabia</li>
-                        <li><a href="https://people.llnl.gov/desupinski1">Bronis R. de Supinski</a> - Lawrence Livermore National Laboratory (LLNL), USA</li>
-                    </ul>
+    <ul>
+    <li><a href="https://www.linkedin.com/in/natalie-bates-396998b">Natalie Bates</a> - <i>Energy Efficient HPC Working Group (EE HPC WG), USA</i></li>
+    <li><a href="https://cemse.kaust.edu.sa/profiles/hatem-ltaief">Hatem Ltaief</a> - <i>King Abdullah University of Science and Technology (KAUST), Saudi Arabia</i></li>
+    <li><a href="https://people.llnl.gov/desupinski1">Bronis R. de Supinski</a> - <i>Lawrence Livermore National Laboratory (LLNL), USA</i></li>
+</ul>
 
                     <h3 class="theme-color">Program Committee</h3>
 <ul>
-<li><span style="color: #005f73;">Ahmad Abdelfattah</span> - University of Tennessee, USA</li>
-<li><span style="color: #005f73;">Ashiq Anjum</span> - University of Leicester, UK</li>
-<li><span style="color: #005f73;">Mauricio Araya-Polo</span> - TotalEnergies E&P R&T, USA</li>
-<li><span style="color: #005f73;">Patrick Carribault</span> - CEA, France</li>
-<li><span style="color: #005f73;">Markus Diesmann</span> - Forschungszentrum Jülich, Germany</li> 
-<li><span style="color: #005f73;">Frédéric Desprez</span> - INRIA, France</li>
-<li><span style="color: #005f73;">Aditya Deshpande</span> - Samsung Semiconductor, USA</li>
-<li><span style="color: #005f73;">Martin Frank</span> -  Karlsruhe Institute of Technology, Germany</li>
-<li><span style="color: #005f73;">William F Godoy</span> - Oak Ridge National Laboratory, USA</li>
-<li><span style="color: #005f73;">Diana Goehringer</span> - Technische Universität Dresden, Germany</li>
-<li><span style="color: #005f73;">Bilel Hadri</span> - KAUST Supercomputing Lab, Saudi Arabia</li>
-<li><span style="color: #005f73;">Georg Hager</span> - Erlangen National High Performance Computing Center, Germany</li>
-<li><span style="color: #005f73;">Aleksandar Ilic</span> - University of Lisbon, Portugal</li>
-<li><span style="color: #005f73;">Zoltan Kiss</span> - Governmental IT Development Agency (KIFÜ), Hungary</li> 
-<li><span style="color: #005f73;">Jacques-Charles Lafoucriere</span> - CEA, France</li>	
-<li><span style="color: #005f73;">Erwin Laure</span> - Max Planck Computing and Data Facility, Germany</li>
-<li><span style="color: #005f73;">Arthur F. Lorenzon</span> - UFRGS, Brazil</li>
-<li><span style="color: #005f73;">Matthias Maiterth</span> - Oak Ridge National Laboratory, USA</li>
-<li><span style="color: #005f73;">Maria Patrou</span> - Oak Ridge National Laboratory, USA</li>
-<li><span style="color: #005f73;">Markus Rampp</span> - Max Planck Computing and Data Facility, Germany</li>
-<li><span style="color: #005f73;">István Z. Reguly</span> - Pázmány Péter Catholic University, Hungary</li>
-<li><span style="color: #005f73;">Filippo Spiga</span> - NVIDIA, UK</li>
-<li><span style="color: #005f73;">Robert Schöne</span> - Technische Universität Dresden, Germany</li>
-<li><span style="color: #005f73;">Fumiyoshi Shoji</span> - RIKEN Center for Computational Science, Japan</li>
-<li><span style="color: #005f73;">Ondřej Vysocký</span> - IT4Innovations National Supercomputing Center, Czech Republic</li>
-<li><span style="color: #005f73;">Xingfu Wu</span> - Argonne National Laboratory, USA</li>
-<li><span style="color: #005f73;">Aleš Zamuda</span> - University of Maribor, Slovenia</li>
-<li><span style="color: #005f73;">Zhengji Zhao</span> - Lawrence Berkeley National Laboratory, USA</li>
+<li><span style="color: #005f73;">Ahmad Abdelfattah</span> - <i>University of Tennessee, USA</i></li>
+<li><span style="color: #005f73;">Ashiq Anjum</span> - <i>University of Leicester, UK</i></li>
+<li><span style="color: #005f73;">Mauricio Araya-Polo</span> - <i>TotalEnergies E&P R&T, USA</i></li>
+<li><span style="color: #005f73;">Patrick Carribault</span> - <i>CEA, France</i></li>
+<li><span style="color: #005f73;">Markus Diesmann</span> - <i>Forschungszentrum Jülich, Germany</i></li> 
+<li><span style="color: #005f73;">Frédéric Desprez</span> - <i>INRIA, France</i></li>
+<li><span style="color: #005f73;">Aditya Deshpande</span> - <i>Samsung Semiconductor, USA</i></li>
+<li><span style="color: #005f73;">Martin Frank</span> - <i>Karlsruhe Institute of Technology, Germany</i></li>
+<li><span style="color: #005f73;">William F Godoy</span> - <i>Oak Ridge National Laboratory, USA</i></li>
+<li><span style="color: #005f73;">Diana Goehringer</span> - <i>Technische Universität Dresden, Germany</i></li>
+<li><span style="color: #005f73;">Bilel Hadri</span> - <i>KAUST Supercomputing Lab, Saudi Arabia</i></li>
+<li><span style="color: #005f73;">Georg Hager</span> - <i>Erlangen National High Performance Computing Center, Germany</i></li>
+<li><span style="color: #005f73;">Aleksandar Ilic</span> - <i>University of Lisbon, Portugal</i></li>
+<li><span style="color: #005f73;">Zoltan Kiss</span> - <i>Governmental IT Development Agency (KIFÜ), Hungary</i></li> 
+<li><span style="color: #005f73;">Jacques-Charles Lafoucriere</span> - <i>CEA, France</i></li>	
+<li><span style="color: #005f73;">Erwin Laure</span> - <i>Max Planck Computing and Data Facility, Germany</i></li>
+<li><span style="color: #005f73;">Arthur F. Lorenzon</span> - <i>UFRGS, Brazil</i></li>
+<li><span style="color: #005f73;">Matthias Maiterth</span> - <i>Oak Ridge National Laboratory, USA</i></li>
+<li><span style="color: #005f73;">Maria Patrou</span> - <i>Oak Ridge National Laboratory, USA</i></li>
+<li><span style="color: #005f73;">Markus Rampp</span> - <i>Max Planck Computing and Data Facility, Germany</i></li>
+<li><span style="color: #005f73;">István Z. Reguly</span> - <i>Pázmány Péter Catholic University, Hungary</i></li>
+<li><span style="color: #005f73;">Filippo Spiga</span> - <i>NVIDIA, UK</i></li>
+<li><span style="color: #005f73;">Robert Schöne</span> - <i>Technische Universität Dresden, Germany</i></li>
+<li><span style="color: #005f73;">Fumiyoshi Shoji</span> - <i>RIKEN Center for Computational Science, Japan</i></li>
+<li><span style="color: #005f73;">Ondřej Vysocký</span> - <i>IT4Innovations National Supercomputing Center, Czech Republic</i></li>
+<li><span style="color: #005f73;">Xingfu Wu</span> - <i>Argonne National Laboratory, USA</i></li>
+<li><span style="color: #005f73;">Aleš Zamuda</span> - <i>University of Maribor, Slovenia</i></li>
+<li><span style="color: #005f73;">Zhengji Zhao</span> - <i>Lawrence Berkeley National Laboratory, USA</i></li>
 </ul>
                     </section>
 
