--- a/index.html
+++ b/index.html
@@ -187,13 +187,16 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Erwin Laure</span> - <i>Max Planck Computing and Data Facility, Germany</i></li>
 <li><span style="color: #005f73;">Arthur F. Lorenzon</span> - <i>UFRGS, Brazil</i></li>
 <li><span style="color: #005f73;">Matthias Maiterth</span> - <i>Oak Ridge National Laboratory, USA</i></li>
+<li><span style="color: #005f73;">Rob Van Nieuwpoort</span> - <i>Leiden University, The Netherlands</i></li>
+<li><span style="color: #005f73;">Dirk Pleiter</span> - KTH Royal Institute of Technology, Sweden</li>
 <li><span style="color: #005f73;">Maria Patrou</span> - <i>Oak Ridge National Laboratory, USA</i></li>
 <li><span style="color: #005f73;">Markus Rampp</span> - <i>Max Planck Computing and Data Facility, Germany</i></li>
 <li><span style="color: #005f73;">István Z. Reguly</span> - <i>Pázmány Péter Catholic University, Hungary</i></li>
 <li><span style="color: #005f73;">Filippo Spiga</span> - <i>NVIDIA, UK</i></li>
 <li><span style="color: #005f73;">Robert Schöne</span> - <i>Technische Universität Dresden, Germany</i></li>
 <li><span style="color: #005f73;">Fumiyoshi Shoji</span> - <i>RIKEN Center for Computational Science, Japan</i></li>
-<li><span style="color: #005f73;">Ondřej Vysocký</span> - <i>IT4Innovations National Supercomputing Center, Czech Republic</i></li>
+<li><span style="color: #005f73;">Andy Turner</span> - University of Leeds, England</li>
+<li><span style="color: #005f73;">Ondřej Vysocký</span> - <i>IT4Innovations National Supercomputing Center, Czech Republic</i></li>	
 <li><span style="color: #005f73;">Xingfu Wu</span> - <i>Argonne National Laboratory, USA</i></li>
 <li><span style="color: #005f73;">Aleš Zamuda</span> - <i>University of Maribor, Slovenia</i></li>
 <li><span style="color: #005f73;">Zhengji Zhao</span> - <i>Lawrence Berkeley National Laboratory, USA</i></li>
