--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Arthur F. Lorenzon</span> - <i>UFRGS, Brazil</i></li>
 <li><span style="color: #005f73;">Matthias Maiterth</span> - <i>Oak Ridge National Laboratory, USA</i></li>
 <li><span style="color: #005f73;">Rob Van Nieuwpoort</span> - <i>Leiden University, The Netherlands</i></li>
-<li><span style="color: #005f73;">Dirk Pleiter</span> - KTH Royal Institute of Technology, Sweden</li>
+<li><span style="color: #005f73;">Dirk Pleiter</span> - University of Groningen, Netherlands</li>
 <li><span style="color: #005f73;">Maria Patrou</span> - <i>Oak Ridge National Laboratory, USA</i></li>
 <li><span style="color: #005f73;">Markus Rampp</span> - <i>Max Planck Computing and Data Facility, Germany</i></li>
 <li><span style="color: #005f73;">István Z. Reguly</span> - <i>Pázmány Péter Catholic University, Hungary</i></li>
@@ -244,7 +244,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <h3>EESP 2026 Statistics Highlights</h3>
 <ul>
     <li>Highest 3/3 score by 4 reviewers in ISC workshop proposal review</li>
-    <li>34 committee members across 13 countries</li>
+    <li>34 committee members across 12 countries</li>
     <li>Keynote by John Gustafson, ASU & Vq Research</li>
     <li>Others: TBA</li>
 </ul>
