--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Erwin Laure</span> - <i>Max Planck Computing and Data Facility, Germany</i></li>
 <li><span style="color: #005f73;">Arthur F. Lorenzon</span> - <i>UFRGS, Brazil</i></li>
 <li><span style="color: #005f73;">Matthias Maiterth</span> - <i>Oak Ridge National Laboratory, USA</i></li>
-<li><span style="color: #005f73;">Rob Van Nieuwpoort</span> - <i>Leiden University, The Netherlands</i></li>
-<li><span style="color: #005f73;">Dirk Pleiter</span> - University of Groningen, Netherlands</li>
+<li><span style="color: #005f73;">Rob Van Nieuwpoort</span> - <i>Leiden University, Netherlands</i></li>
 <li><span style="color: #005f73;">Maria Patrou</span> - <i>Oak Ridge National Laboratory, USA</i></li>
+<li><span style="color: #005f73;">Dirk Pleiter</span> - University of Groningen, Netherlands</li>
 <li><span style="color: #005f73;">Markus Rampp</span> - <i>Max Planck Computing and Data Facility, Germany</i></li>
 <li><span style="color: #005f73;">István Z. Reguly</span> - <i>Pázmány Péter Catholic University, Hungary</i></li>
 <li><span style="color: #005f73;">Filippo Spiga</span> - <i>NVIDIA, UK</i></li>
