--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Ashiq Anjum</span> - <i>University of Leicester, UK</i></li>
 <li><span style="color: #005f73;">Mauricio Araya-Polo</span> - <i>TotalEnergies E&P R&T, USA</i></li>
 <li><span style="color: #005f73;">Patrick Carribault</span> - <i>CEA, France</i></li>
+<li><span style="color: #005f73;">Biagio Cosenza</span> - <i>University of Salerno, Italy</i></li>
 <li><span style="color: #005f73;">Markus Diesmann</span> - <i>Forschungszentrum Jülich, Germany</i></li> 
 <li><span style="color: #005f73;">Frédéric Desprez</span> - <i>INRIA, France</i></li>
 <li><span style="color: #005f73;">Aditya Deshpande</span> - <i>Samsung Semiconductor, USA</i></li>
@@ -197,6 +198,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Fumiyoshi Shoji</span> - <i>RIKEN Center for Computational Science, Japan</i></li>
 <li><span style="color: #005f73;">Andy Turner</span> - University of Leeds, England</li>
 <li><span style="color: #005f73;">Ondřej Vysocký</span> - <i>IT4Innovations National Supercomputing Center, Czech Republic</i></li>	
+<li><span style="color: #005f73;">Josef Weidendorfer</span> - <i>Technische Universität München, Germany</i></li>
 <li><span style="color: #005f73;">Xingfu Wu</span> - <i>Argonne National Laboratory, USA</i></li>
 <li><span style="color: #005f73;">Aleš Zamuda</span> - <i>University of Maribor, Slovenia</i></li>
 <li><span style="color: #005f73;">Zhengji Zhao</span> - <i>Lawrence Berkeley National Laboratory, USA</i></li>
@@ -244,7 +246,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <h3>EESP 2026 Statistics Highlights</h3>
 <ul>
     <li>Highest 3/3 score by 4 reviewers in ISC workshop proposal review</li>
-    <li>34 committee members across 12 countries</li>
+    <li>36 committee members across 13 countries</li>
     <li>Keynote by John Gustafson, ASU & Vq Research</li>
     <li>Others: TBA</li>
 </ul>
