--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                                 <li>Papers should be either <strong>short</strong> (work-in-progress, 6 pages) or <strong>regular</strong> (12 pages), including references and appendices.</li>
                                 <li>Submitted papers must be original and not previously published or under review elsewhere.</li>
                                 <li>Use the <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines" target="_blank">Springer Lecture Notes in Computer Science (LNCS) template</a>.</li>
-                                <li>Submit papers in PDF format through the ISC Linklings submission system (Link: TBA).</li>
+                                <li>Submit papers in PDF format through the ISC Linklings submission system at <a href="https://ssl.linklings.net/conferences/isc_hpc/?page=Submit&id=2ndInternationalWorkshoponEnergyEfficiencywithSustainablePerformanceTechniquesToolsandBestPracticesSubmission&site=ischpc2026" target="_blank">https://go-nhr.de/ISC26-EESP</a>.</li>
                             </ul>
                         </li>
                         <li><strong>Review Process</strong>
