--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
         </p>
     </div>
 
-    <h3>EESP Journal Special Issue</h3>
+    <h3>EESP Special Journal Issue</h3>
     <div style="display: flex; align-items: center; gap: 15px;">
         <img src="assets/sage.svg" alt="IJHPCA Logo" style="height: 60px;">
         <p style="margin: 0;">
