--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Ahmad Abdelfattah</span> - <i>University of Tennessee, USA</i></li>
 <li><span style="color: #005f73;">Ashiq Anjum</span> - <i>University of Leicester, UK</i></li>
 <li><span style="color: #005f73;">Mauricio Araya-Polo</span> - <i>TotalEnergies E&P R&T, USA</i></li>
+<li><span style="color: #005f73;">Paolo	Bientinesi</span> - Umeå University, Sweden</li>
 <li><span style="color: #005f73;">Patrick Carribault</span> - <i>CEA, France</i></li>
 <li><span style="color: #005f73;">Biagio Cosenza</span> - <i>University of Salerno, Italy</i></li>
 <li><span style="color: #005f73;">Markus Diesmann</span> - <i>Forschungszentrum Jülich, Germany</i></li> 
