--- a/index.html
+++ b/index.html
@@ -200,8 +200,9 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Fumiyoshi Shoji</span> - <i>RIKEN Center for Computational Science, Japan</i></li>
 <li><span style="color: #005f73;">Andy Turner</span> - University of Leeds, England</li>
 <li><span style="color: #005f73;">Ondřej Vysocký</span> - <i>IT4Innovations National Supercomputing Center, Czech Republic</i></li>	
-<li><span style="color: #005f73;">Josef Weidendorfer</span> - <i>Technische Universität München, Germany</i></li>
 <li><span style="color: #005f73;">Xingfu Wu</span> - <i>Argonne National Laboratory, USA</i></li>
+<li><span style="color: #005f73;">Josef Weidendorfer</span> - <i>Technische Universität München, Germany</i></li>
+<li><span style="color: #005f73;">Kazutomo Yoshii</span> - <i>Argonne National Laboratory, USA</i></li>
 <li><span style="color: #005f73;">Aleš Zamuda</span> - <i>University of Maribor, Slovenia</i></li>
 <li><span style="color: #005f73;">Zhengji Zhao</span> - <i>Lawrence Berkeley National Laboratory, USA</i></li>
 </ul>
@@ -248,7 +249,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <h3>EESP 2026 Statistics Highlights</h3>
 <ul>
     <li>Highest 3/3 score by 4 reviewers in ISC workshop proposal review</li>
-    <li>39 committee members across 14 countries</li>
+    <li>40 committee members across 14 countries</li>
     <li>Keynote by John Gustafson, ASU & Vq Research</li>
     <li>Others: TBA</li>
 </ul>
