--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Paolo	Bientinesi</span> - Umeå University, Sweden</li>
 <li><span style="color: #005f73;">Patrick Carribault</span> - <i>CEA, France</i></li>
 <li><span style="color: #005f73;">Biagio Cosenza</span> - <i>University of Salerno, Italy</i></li>
+<li><span style="color: #005f73;">Fabien Chaix</span> - <i>ICS-FORTH, Greece</i></li>
 <li><span style="color: #005f73;">Markus Diesmann</span> - <i>Forschungszentrum Jülich, Germany</i></li> 
 <li><span style="color: #005f73;">Frédéric Desprez</span> - <i>INRIA, France</i></li>
 <li><span style="color: #005f73;">Aditya Deshpande</span> - <i>Samsung Semiconductor, USA</i></li>
@@ -249,7 +250,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <h3>EESP 2026 Statistics Highlights</h3>
 <ul>
     <li>Highest 3/3 score by 4 reviewers in ISC workshop proposal review</li>
-    <li>40 committee members across 14 countries</li>
+    <li>41 committee members across 15 countries</li>
     <li>Keynote by John Gustafson, ASU & Vq Research</li>
     <li>Others: TBA</li>
 </ul>
