--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Frédéric Desprez</span> - <i>INRIA, France</i></li>
 <li><span style="color: #005f73;">Aditya Deshpande</span> - <i>Samsung Semiconductor, USA</i></li>
 <li><span style="color: #005f73;">Martin Frank</span> - <i>Karlsruhe Institute of Technology, Germany</i></li>
+<li><span style="color: #005f73;">Ryan E. Grant</span> - <i>Queen's University, Canada</i></li>
 <li><span style="color: #005f73;">William F Godoy</span> - <i>Oak Ridge National Laboratory, USA</i></li>
 <li><span style="color: #005f73;">Diana Goehringer</span> - <i>Technische Universität Dresden, Germany</i></li>
 <li><span style="color: #005f73;">Bilel Hadri</span> - <i>KAUST Supercomputing Lab, Saudi Arabia</i></li>
@@ -250,7 +251,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <h3>EESP 2026 Statistics Highlights</h3>
 <ul>
     <li>Highest 3/3 score by 4 reviewers in ISC workshop proposal review</li>
-    <li>41 committee members across 15 countries</li>
+    <li>42 committee members across 15 countries</li>
     <li>Keynote by John Gustafson, ASU & Vq Research</li>
     <li>Others: TBA</li>
 </ul>
