--- a/index.html
+++ b/index.html
@@ -262,8 +262,9 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <h3>EESP 2026 Statistics Highlights</h3>
 <ul>
     <li>Highest 3/3 score by 4 reviewers in ISC workshop proposal review</li>
-    <li>43 committee members across 15 countries</li>
+	<li>NEW this year: Special Journal Issue at IJHPCA</li>
     <li>Keynote by John Gustafson, ASU & Vq Research</li>
+    <li>43 committee members across 15 countries</li>
     <li>Others: TBA</li>
 </ul>
 
