--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Matthias Maiterth</span> - <i>Oak Ridge National Laboratory, USA</i></li>
 <li><span style="color: #005f73;">Rob Van Nieuwpoort</span> - <i>Leiden University, Netherlands</i></li>
 <li><span style="color: #005f73;">Michael Ott</span> - <i>Leibniz Supercomputing Centre, Germany</i></li>	
+<li><span style="color: #005f73;">Radu Prodan</span> - <i>University of Innsbruck, Austria</i></li>
 <li><span style="color: #005f73;">Maria Patrou</span> - <i>Oak Ridge National Laboratory, USA</i></li>
 <li><span style="color: #005f73;">Dirk Pleiter</span> - University of Groningen, Netherlands</li>
 <li><span style="color: #005f73;">Markus Rampp</span> - <i>Max Planck Computing and Data Facility, Germany</i></li>
