--- a/2025.html
+++ b/2025.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EESP Workshop 2025</title>
     <link rel="stylesheet" href="css/style.css">
+	<!-- Social preview -->
+	<meta property="og:title" content="EESP Workshop 2025">
+	<meta property="og:description" content="Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices. June 13, 2025, Hamburg, Germany.">
+	<meta property="og:image" content="assets/EESP25-compressed.png">
+	<meta property="og:type" content="website">
+	
+	<!-- Optional: Twitter preview -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="EESP Workshop 2025">
+	<meta name="twitter:description" content="Energy Efficiency with Sustainable Performance: Techniques, Tools, and Best Practices. June 13, 2025, Hamburg, Germany.">
+	<meta name="twitter:image" content="assets/EESP25-compressed.png">
 </head>
 <body>
     
