--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 	
 	  gtag('config', 'G-NX5HY8F5PV');
 	</script>
+	
+	<!-- Social preview -->
+	<meta property="og:title" content="EESP Workshop 2026">
+	<meta property="og:description" content="2nd International Workshop on Energy Efficiency with Sustainable Performance. June 26, 2026, Hamburg, Germany.">
+	<meta property="og:image" content="assets/eesp-logo-2026-compressed.png">
+	<meta property="og:type" content="website">
+	
+	<!-- Optional: Twitter preview -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="EESP Workshop 2026">
+	<meta name="twitter:description" content="2nd International Workshop on Energy Efficiency with Sustainable Performance. June 26, 2026, Hamburg, Germany.">
+	<meta name="twitter:image" content="assets/eesp-logo-2026-compressed.png">
 </head>
 <body>
     
@@ -35,7 +47,7 @@
         <a href="https://www.isc-hpc.com/" target="_blank">
             <img src="assets/ISC2026_Logo_Motto_Datum_RGB-scaled.png" alt="ISC High Performance 2026 Logo" style="height: 125px; width: auto; vertical-align: middle;">
 			<br>
-    <a href="assets/isc-logo.png" download="ISC_HPC_Logo_2026" style="font-size: 0.9em; color: white; text-decoration: none;">Download Logo</a>
+    <a href="assets/ISC2026_Logo_Motto_Datum_RGB-scaled.png" download="ISC_HPC_Logo_2026" style="font-size: 0.9em; color: white; text-decoration: none;">Download Logo</a>
         </a>
     </div>
 </header>
