--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EESP Workshop 2026</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EESP Workshop 2026</title>
+  <link rel="stylesheet" href="css/style.css">
 
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NX5HY8F5PV"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-	
-	  gtag('config', 'G-NX5HY8F5PV');
-	</script>
-	
-	<!-- Social preview -->
-	<meta property="og:title" content="EESP Workshop 2026">
-	<meta property="og:description" content="2nd International Workshop on Energy Efficiency with Sustainable Performance. June 26, 2026, Hamburg, Germany.">
-	<meta property="og:image" content="assets/eesp-logo-2026-compressed.png">
-	<meta property="og:type" content="website">
-	
-	<!-- Optional: Twitter preview -->
-	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="EESP Workshop 2026">
-	<meta name="twitter:description" content="2nd International Workshop on Energy Efficiency with Sustainable Performance. June 26, 2026, Hamburg, Germany.">
-	<meta name="twitter:image" content="assets/eesp-logo-2026-compressed.png">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="assets/eesp-logo-2026-compressed.png">
+
+  <!-- Social preview for LinkedIn, Facebook, Twitter -->
+  <meta property="og:title" content="EESP Workshop 2026">
+  <meta property="og:description" content="2nd International Workshop on Energy Efficiency with Sustainable Performance. June 26, 2026, Hamburg, Germany.">
+  <meta property="og:image" content="https://ayeshaafzal91.github.io/eesp/assets/eesp-logo-2026-compressed.png">
+  <meta property="og:type" content="website">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="EESP Workshop 2026">
+  <meta name="twitter:description" content="2nd International Workshop on Energy Efficiency with Sustainable Performance. June 26, 2026, Hamburg, Germany.">
+  <meta name="twitter:image" content="https://ayeshaafzal91.github.io/eesp/assets/eesp-logo-2026-compressed.png">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NX5HY8F5PV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-NX5HY8F5PV');
+  </script>
 </head>
-<body>
     
 <header style="display: flex; justify-content: space-between; align-items: center;">
     <div style="flex: 1; text-align: left;">
