--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Paolo	Bientinesi</span> - Umeå University, Sweden</li>
 <li><span style="color: #005f73;">Patrick Carribault</span> - <i>CEA, France</i></li>
 <li><span style="color: #005f73;">Biagio Cosenza</span> - <i>University of Salerno, Italy</i></li>
+<li><span style="color: #005f73;">Stefano Corda</span> - <i>Huawei Technologies Switzerland</i></li>
 <li><span style="color: #005f73;">Fabien Chaix</span> - <i>ICS-FORTH, Greece</i></li>
 <li><span style="color: #005f73;">Markus Diesmann</span> - <i>Forschungszentrum Jülich, Germany</i></li> 
 <li><span style="color: #005f73;">Frédéric Desprez</span> - <i>INRIA, France</i></li>
@@ -277,7 +278,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
     <li>Highest 3/3 score by 4 reviewers in ISC workshop proposal review</li>
 	<li>NEW this year: Special Journal Issue at IJHPCA</li>
     <li>Keynote by John Gustafson, ASU & Vq Research</li>
-    <li>44 committee members across 17 countries</li>
+    <li>45 committee members across 18 countries</li>
     <li>Others: TBA</li>
 </ul>
 
